--- a/npkpir_23/web/ksiegowaFK/guestFKZapisyKonta.xhtml
+++ b/npkpir_23/web/ksiegowaFK/guestFKZapisyKonta.xhtml
@@ -24,7 +24,7 @@
                         </p:panel>
                         <ui:include src="sub/menu_wiad.xhtml"/>   <!-- menu contextowe i pole wiadomosci growl-->
                         <ui:include src="../wspolny/sub/zapisy_nakontach_wmcu.xhtml"/> 
-                        <ui:include src="sub/dialog/dialog_zmiana_okresu.xhtml"/> <!-- właściwa tablica z danymi z księgi-->
+                         <!-- właściwa tablica z danymi z księgi-->
                     </pe:layoutPane><ui:include src="sub/layout/south.xhtml"/> 
                 </pe:layout>
             </f:view>
