--- a/npkpir_23/web/templateFK.xhtml
+++ b/npkpir_23/web/templateFK.xhtml
@@ -82,7 +82,10 @@
                 <h:outputText value="trwa ładowanie strony" style="color: blue; font-size: larger;  font-family: 'Arial Black', 'Arial Bold', Gadget, sans-serif;"/>
                 <br/>
                 <p:graphicImage value="/resources/images/template-loader.gif" style="margin-top: 30px;"/>
-            </p:outputPanel>-->
+            </p:outputPanel>-->  <p:confirmPopup global="true">
+                <p:commandButton value="Nie" type="button" styleClass="ui-confirm-popup-no ui-button-flat"/>
+                <p:commandButton value="Tak" type="button" styleClass="ui-confirm-popup-yes" />
+            </p:confirmPopup>
             <ui:insert name="body" > 
             </ui:insert>
         </h:body>
