uolepszenia css na primeflex

--- a/npkpir_23/web/ksiegowa/ksiegowaZmianapodatnika.xhtml
+++ b/npkpir_23/web/ksiegowa/ksiegowaZmianapodatnika.xhtml
@@ -21,12 +21,12 @@
                     <!-- główna zawartość strony -->
                     <div class="flex-grow-1 grid grid-nogutter">
                         <!-- panel zachodni -->
-                        <div class="col-12 md:col-3 lg:col-2">
+                        <div class="col-12 md:col-3 lg:col-2"  style="max-width: 180px;">
                             <ui:include src="sub/layoutNowy/west.xhtml"/>
                         </div>
 
                         <!-- panel centralny -->
-                        <div class="col-12 md:col-9 lg:col-10">
+                        <div class="col-12 md:col-9 lg:col-10 flex">
                             <ui:include src="./sub/zmianapodatnika.xhtml"/>
                         </div>
                     </div>
