--- a/npkpir_23/web/ksiegowa/sub/dokumentyzaksiegowane.xhtml
+++ b/npkpir_23/web/ksiegowa/sub/dokumentyzaksiegowane.xhtml
@@ -49,7 +49,10 @@
             <p:menuitem></p:menuitem>
             <p:menuitem global="false" value="Okresowa" update=":formM:messages" icon="pi pi-calendar" actionListener="#{fakturyokresoweView.dodajfaktureokresowa()}"/>
             <p:menuitem global="false" value="PDF" update=":formM:messages" actionListener="#{DokTabView.printPDFPK()}" icon="pi pi-file-pdf" onsuccess="wydrukpk('#{WpisView.podatnikWpisu}');"/>
-            <p:menuitem global="false" value="Usuń wybrane" actionListener="#{DokTabView.destroygrupa()}" icon="pi pi-trash" onclick="PF('confirmation1').show();" update=":form:dokumentyLista" rendered="#{!zamkniecieView.sprawdzMiesiacRok()}"/>
+            <p:menuitem global="false" value="Usuń wybrane" actionListener="#{DokTabView.destroygrupa2()}" icon="pi pi-trash" update=":form:dokumentyLista" 
+                        rendered="#{!zamkniecieView.sprawdzMiesiacRok()}">
+                <p:confirm type="popup" header="Usuwanie wybranych dokumentów" message="Napewno usunąć?" icon="pi pi-question-circle" /> 
+            </p:menuitem>
             <p:menuitem global="false" value="Switch" update=":formM:messages" actionListener="#{DokTabView.aktywacjadeaktywacja()}" icon="pi pi-lock" rendered="#{facesContext.externalContext.remoteUser eq 'szef'}"/>
         </p:contextMenu>
         
