uolepszenia css na primeflex zestawienei roczne

--- a/npkpir_23/web/guest/sub/podatki.xhtml
+++ b/npkpir_23/web/guest/sub/podatki.xhtml
@@ -17,7 +17,7 @@
                     <p:row>
                         <p:column headerText="mc"/>
                         <p:column headerText="pit4"/>
-                        <p:column headerText="#{WpisView.ksiegaryczalt eq true ? 'pit5' : 'ryczałt'}"/>
+                        <p:column headerText="#{WpisView.ryczalt0ksiega1 eq true ? 'pit5' : 'ryczałt'}"/>
                         <p:column headerText="vat"/>
                         <p:column headerText="zus51"/>
                         <p:column headerText="zus52"/>
