--- a/npkpir_23/web/guest/sub/zestawienieRok_wykres.xhtml
+++ b/npkpir_23/web/guest/sub/zestawienieRok_wykres.xhtml
@@ -15,7 +15,7 @@
         </script>-->
       <p:chart type="line" model="#{zestawienieView.linearModel}" 
                      style="width:1000px; height: 600px;" 
-                     id="chart"  rendered="#{WpisView.ksiegaryczalt}"/> 
+                     id="chart"  rendered="#{WpisView.ryczalt0ksiega1}"/> 
        
     </p:tab>
 </ui:composition>   
