--- a/npkpir_23/web/ksiegowa/sub/zestawienieRok_wykres.xhtml
+++ b/npkpir_23/web/ksiegowa/sub/zestawienieRok_wykres.xhtml
@@ -15,11 +15,11 @@
         </script>-->
 <p:chart type="line" model="#{zestawienieView.linearModel}" 
                      style="width:1000px; height: 600px;" 
-                     id="chart"  rendered="#{WpisView.ksiegaryczalt}"/>
+                     id="chart"  rendered="#{WpisView.ryczalt0ksiega1}"/>
 
 <!--<p:chart type="line" model="{ZestawienieView.linearModel}" 
                      style="width:1000px; height: 600px;" 
-                     id="chartr"  rendered="{!WpisView.ksiegaryczalt}"/>-->
+                     id="chartr"  rendered="{!WpisView.ryczalt0ksiega1}"/>-->
     </p:tab>
 </ui:composition>   
 
