--- a/npkpir_23/web/ksiegowa/ksiegowaTablica.xhtml
+++ b/npkpir_23/web/ksiegowa/ksiegowaTablica.xhtml
@@ -9,22 +9,22 @@
         <ui:define name="title">
             <h:outputText value="Podatkowa księga przychodów i rozchodów"></h:outputText>
         </ui:define>
-
+        <ui:define name="body">
             <f:view>
                 <div class="flex flex-column min-h-screen">
                     <!-- panel północny -->
                     <div class="col-12">
                         <ui:include src="sub/layoutNowy/north.xhtml"/>
                     </div>
-  
+
                     <div class="flex-grow-1 grid grid-nogutter">
                         <!-- panel zachodni -->
-                        <div class="col-12 md:col-3 lg:col-2">
+                        <div class="col-12 md:col-3 lg:col-2" style="max-width: 200px;">
                             <ui:include src="sub/layoutNowy/west.xhtml"/>
                         </div>
 
                         <!-- panel centralny -->
-                        <div class="col-12 md:col-9 lg:col-10">
+                        <div class="col-12 md:col-9 lg:col-10 flex">
                             <h:form id="formM">
                                 <ui:include src="sub/menu_wiad.xhtml"/>   <!-- menu contextowe i pole wiadomosci growl-->
                             </h:form>
@@ -55,7 +55,7 @@
                         <!-- panel południowy (footer) -->
                     </div>
                     <div class="col-12">
-                            <ui:include src="sub/layoutNowy/south.xhtml"/>
+                        <ui:include src="sub/layoutNowy/south.xhtml"/>
                     </div>
                 </div>
             </f:view>
