--- a/npkpir_23/web/ksiegowa/sub/pit_oblicz.xhtml
+++ b/npkpir_23/web/ksiegowa/sub/pit_oblicz.xhtml
@@ -8,7 +8,7 @@
 
     xmlns:bcf="http://brzaskun.com/facelets" xmlns:pe="http://primefaces.org/ui/extensions">
     <p:tabView id="akordeon"  rendered="#{WpisView.biuroiszef eq true}">
-        <p:tab id="tab2" title="Oblicz PIT" rendered="#{WpisView.ksiegaryczalt}" >
+        <p:tab id="tab2" title="Oblicz PIT" rendered="#{WpisView.ryczalt0ksiega1}" >
               <h:outputText value="Uwaga podatnik rozlicza się kwartalnie!" style="font-weight: 900; color: red;" rendered="#{WpisView.mc0kw1}"/>
             <h:form id="formpit">
                 <p:growl life="3600"  id="messages" ><p:autoUpdate/></p:growl>
@@ -283,7 +283,7 @@
                 </p:panelGrid>
             </h:form>
         </p:tab>
-        <p:tab id="tab4" title="Oblicz Ryczałt" rendered="#{!WpisView.ksiegaryczalt}">
+        <p:tab id="tab4" title="Oblicz Ryczałt" rendered="#{!WpisVieryczalt0ksiega1lt}">
             <h:outputText value="Uwaga podatnik rozlicza się kwartalnie!" style="font-weight: 900; color: red;" rendered="#{WpisView.mc0kw1}"/>
             <h:form id="formpit1">
                 <p:growl life="3600"  id="messages" ><p:autoUpdate/></p:growl>
@@ -556,7 +556,7 @@
             </h:form>
         </p:tab>
         <p:tab id="tab6" title="Archiwum PIT">
-            <p:panelGrid columns="4" style="width: 700px" rendered="#{WpisView.ksiegaryczalt and WpisView.biuroiszef eq true}" >
+            <p:panelGrid columns="4" style="width: 700px" rendered="#{WpisVryczalt0ksiega1zalt and WpisView.biuroiszef eq true}" >
                 <h:form id="formpi" style="width: 500px" >
                     <p:panel header="wybierz rozliczenie wg cech: " style="width: 250px;" rendered="#{pitView.pobranecechypodatnik ne null and pitView.pobranecechypodatnik.size() gt 1}"/>
                     <p:selectOneMenu value="#{pitView.wybranacechadok}" style="width: 250px;"  rendered="#{pitView.pobranecechypodatnik ne null and pitView.pobranecechypodatnik.size() gt 1}" converter="#{cechaConv}">
@@ -670,7 +670,7 @@
                     </p:panelGrid>
                 </h:form>
             </p:panelGrid>
-            <p:panelGrid columns="4" style="width: 600px" rendered="#{!WpisView.ksiegaryczalt}">
+            <p:panelGrid columns="4" style="width: 600px" rendered="#{!WpisVryczalt0ksiega1zalt}">
                 <h:form id="formpi1" style="width: 400px" >
                     <p:growl life="3600"  id="messages" ><p:autoUpdate/></p:growl>
 
