--- a/npkpir_23/web/ksiegowa/sub/pismoadmin.xhtml
+++ b/npkpir_23/web/ksiegowa/sub/pismoadmin.xhtml
@@ -5,6 +5,8 @@
     xmlns:p="http://primefaces.org/ui"
     xmlns:ui="http://java.sun.com/jsf/facelets"
     xmlns:ft="http://primefaces.prime.com.tr/facestrace">
+    <div class="vertical-container">
+        <div class="col-12 md:col-4 lg:col-3" style="max-width: 440px;" >
     <h:form id="form">
         <p:panelGrid columns="2" style="min-width: 70%;">
             <f:facet name="header">
@@ -16,9 +18,11 @@
              <p:commandButton value="napisz do admina" actionListener="#{pismoAdminView.molestujadmina}" style="width: 150px;" update=":wykazpism @form"/>
         </p:panelGrid>
     </h:form>
+            </div>
+        <div class="col-12 md:col-9 lg:col-10">
     <f:view>
         <h:form id="wykazpism">
-            <p:dataTable lazy="false"  value="#{pismoAdminView.listapism}" var="item" style="width: 70%; margin-top: 2%;"
+            <p:dataTable lazy="false"  value="#{pismoAdminView.listapism}" var="item" style="max-width: 1200px; margin-top: 2%;"
                          widgetVar="table" emptyMessage="Nikt nie niepokoił jeszcze admina" reflow="true"
                          paginator="true" rows="12" paginatorTemplate="{FirstPageLink} {PageLinks} {LastPageLink} {RowsPerPageDropdown}" 
                          rowsPerPageTemplate="12,16,20,50"  sortBy="#{item.datawiadomosci}"
@@ -77,7 +81,8 @@
             </p:dataTable>
         </h:form>
     </f:view>
-
+</div>
+        </div>
    
 </ui:composition>   
 
