--- a/npkpir_23/web/ksiegowa/sub/dokument_wpis.xhtml
+++ b/npkpir_23/web/ksiegowa/sub/dokument_wpis.xhtml
@@ -328,7 +328,7 @@
                 <p:menuitem global="false" value="Sprzedaż" onclick="PF('confirmation').show()" actionListener="#{sTRSprzedazView.sprzedajgrupa(DokumentView.selDokument.dataWyst,DokumentView.selDokument.nrWlDk)}" icon="ui-icon-trash"/>
                 <p:menuitem global="false" value="Odkup" onclick="PF('confirmation1').show()" actionListener="#{sTRSprzedazView.sprzedajgrupa(DokumentView.selDokument.dataWyst,DokumentView.selDokument.nrWlDk)}" icon="ui-icon-trash"/>
             </p:contextMenu>
-            <p:panel id="panelewidencji" style="width: 1400px;">
+            <p:panel id="panelewidencji" style="max-width: 1400px;">
                 <p:dataTable lazy="false"   var="wpis" value="#{sTRTabView.srodkiTrwale}" id="srodkiLista" rendered="#{DokumentView.pokazEST}"
                               paginator="true" paginatorAlwaysVisible="true" rows="6"  filteredValue="#{sTRTabView.filteredValues}"
                               paginatorTemplate="{FirstPageLink} {PageLinks} {LastPageLink} {RowsPerPageDropdown}" 
@@ -392,7 +392,7 @@
 
             </p:panel>
             <!--pola ewidencji SRODKOW TRWALYCH-->
-            <p:outputPanel id="panelwyszukiwarki" style="width: 900px;" >
+            <p:outputPanel id="panelwyszukiwarki" style="max-width: 900px;" >
                 <p:panel header="wyszukiwarka środka trw." style="width: 300px;" rendered="#{DokumentView.renderujwysz}"/>
                 <p:autoComplete id="acForce1" value="#{DokumentView.srodekkategoria}" completeMethod="#{srodkikstView.complete}"
                                 var="pa" itemLabel="#{pa.nazwa}" itemValue="#{pa}"  converter="SrodkiConv"
@@ -475,7 +475,7 @@
             </p:outputPanel>
             <!--pola ewidencji VAT-->
 
-            <p:panel id="panelewidencjivat" style="width: 900px;">
+            <p:panel id="panelewidencjivat" style="max-width: 900px;">
                 <!--                alternatywne pola ewidencji vat-->
                 <p:dataTable lazy="false"  id="tablicavat" value="#{DokumentView.selDokument.ewidencjaVAT1}" var="item" emptyMessage="nie ma zapisów w ewidencji vat" style="width: 90%;" rendered="#{!DokumentView.ukryjEwiencjeVAT}">
                     <p:column headerText="rodzaj ewidencji" style="width: 25%;">
