proba dodania ajaxa do menuitem ale nie dziala

--- a/npkpir_23/web/ksiegowa/ksiegowaWaluty.xhtml
+++ b/npkpir_23/web/ksiegowa/ksiegowaWaluty.xhtml
@@ -11,9 +11,9 @@
         <ui:define name="body">
             <f:view>
                 <pe:layout fullPage="true" >
-                    <ui:include src="sub/layoutIndex/north.xhtml"/>  <!-- panel polnocny-->
+                    <ui:include src="sub/layoutZmianapodatnika/north.xhtml"/>  <!-- panel polnocny-->
                     <ui:include src="sub/layoutZmianapodatnika/south.xhtml"/>   <!-- panel poludniowy-->
-                    <ui:include src="sub/layoutIndex/west.xhtml"/>   <!-- panel zachodni-->
+                    <ui:include src="sub/layoutZmianapodatnika/west.xhtml"/>   <!-- panel zachodni-->
                     <ui:include src="sub/layoutZmianapodatnikaWaluty/east.xhtml"/>   <!-- panel wchodni-->
                     <pe:layoutPane position="center">
                         <ui:include src="sub/menu_wiad.xhtml" />
