--- a/npkpir_23/web/ksiegowa/sub/podatnikust.xhtml
+++ b/npkpir_23/web/ksiegowa/sub/podatnikust.xhtml
@@ -7,37 +7,44 @@
     xmlns:p="http://primefaces.org/ui"
     xmlns:ui="http://java.sun.com/jsf/facelets"
     >
+    <div class="vertical-container">
+        <div class="col-12 md:col-9 lg:col-10" style="max-width: 1400px;" >
 
-    <p:panel header="Parametryzowanie indywidualne podatnika: #{podatnikView.nazwaWybranegoPodatnika}" style="font-weight: bold; width: 1400px;"/>
-    
-    <p:tabView id="akordeon" style="width: 1380px;">
-       <ui:include src="podatnikust/edycjadanychpodatnika.xhtml"/>
-       <ui:include src="podatnikust/aktywnedokumentyksiegowe.xhtml"/>
-       <ui:include src="podatnikust/udzialywfirmie.xhtml"/>
-       <ui:include src="podatnikust/wyboropodatkowania.xhtml"/>
-       <ui:include src="podatnikust/wyborvat.xhtml"/>
-       <ui:include src="podatnikust/wyborvatUE.xhtml"/>
-       <ui:include src="podatnikust/inwentaryzacja.xhtml"/>
-       <ui:include src="podatnikust/inwentaryzacja_old.xhtml"/>
-       <ui:include src="podatnikust/kwotaautoryzujaca.xhtml"/>
-       <ui:include src="podatnikust/pole47.xhtml"/>
-       <ui:include src="podatnikust/numeracja.xhtml"/>
-       <ui:include src="podatnikust/danedofaktury.xhtml"/>
-       <ui:include src="podatnikust/wysylkazusmail.xhtml"/>
-       <ui:include src="podatnikust/zawieszeniedzialalnosci.xhtml"/>
-       <ui:include src="podatnikust/cechydokumentow.xhtml"/>
-       <ui:include src="podatnikust/paramprocentvat.xhtml"/>
-       <ui:include src="podatnikust/paramdeklvatnadwyzka.xhtml"/>
-       <ui:include src="podatnikust/dodatkidrobiazgi.xhtml"/>
-       <ui:include src="podatnikust/sprzedazewidencja.xhtml"/>
-       <ui:include src="podatnikust/automatyzacja.xhtml"/>
-       <ui:include src="podatnikust/niemcy.xhtml"/>
-    </p:tabView>
-    <p:panelGrid columns="1" style="padding: 10px;" rendered="#{podatnikView.selected.datawprowadzenia ne null}">
-        <h:outputText value="ostatnia zmiana - #{podatnikView.selected.wprowadzil.toStringLIN()}"/>
-        <h:outputText value="#{podatnikView.selected.datawprowadzenia}">
-            <f:convertDateTime dateStyle="full" timeStyle="full" type="both" locale="pl_PL" timeZone="Poland"/>
-        </h:outputText>
-    </p:panelGrid>
+            <p:panel header="Parametryzowanie indywidualne podatnika: #{podatnikView.nazwaWybranegoPodatnika}" style="font-weight: bold;"/>
+        </div>
+        <div class="col-12 md:col-9 lg:col-10" style="max-width: 1380px;">
+            <p:tabView id="akordeon" >
+                <ui:include src="podatnikust/edycjadanychpodatnika.xhtml"/>
+                <ui:include src="podatnikust/aktywnedokumentyksiegowe.xhtml"/>
+                <ui:include src="podatnikust/udzialywfirmie.xhtml"/>
+                <ui:include src="podatnikust/wyboropodatkowania.xhtml"/>
+                <ui:include src="podatnikust/wyborvat.xhtml"/>
+                <ui:include src="podatnikust/wyborvatUE.xhtml"/>
+                <ui:include src="podatnikust/inwentaryzacja.xhtml"/>
+                <ui:include src="podatnikust/inwentaryzacja_old.xhtml"/>
+                <ui:include src="podatnikust/kwotaautoryzujaca.xhtml"/>
+                <ui:include src="podatnikust/pole47.xhtml"/>
+                <ui:include src="podatnikust/numeracja.xhtml"/>
+                <ui:include src="podatnikust/danedofaktury.xhtml"/>
+                <ui:include src="podatnikust/wysylkazusmail.xhtml"/>
+                <ui:include src="podatnikust/zawieszeniedzialalnosci.xhtml"/>
+                <ui:include src="podatnikust/cechydokumentow.xhtml"/>
+                <ui:include src="podatnikust/paramprocentvat.xhtml"/>
+                <ui:include src="podatnikust/paramdeklvatnadwyzka.xhtml"/>
+                <ui:include src="podatnikust/dodatkidrobiazgi.xhtml"/>
+                <ui:include src="podatnikust/sprzedazewidencja.xhtml"/>
+                <ui:include src="podatnikust/automatyzacja.xhtml"/>
+                <ui:include src="podatnikust/niemcy.xhtml"/>
+            </p:tabView>
+        </div>
+        <div class="col-12 md:col-9 lg:col-10" style="max-width: 1380px;padding: 10px;">
+            <p:panelGrid columns="1" rendered="#{podatnikView.selected.datawprowadzenia ne null}">
+                <h:outputText value="ostatnia zmiana - #{podatnikView.selected.wprowadzil.toStringLIN()}"/>
+                <h:outputText value="#{podatnikView.selected.datawprowadzenia}">
+                    <f:convertDateTime dateStyle="full" timeStyle="full" type="both" locale="pl_PL" timeZone="Poland"/>
+                </h:outputText>
+            </p:panelGrid>
+        </div>
+    </div>
 </ui:composition>   
 
